--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 nav {
   background-color: rgb(32, 178, 154);
   padding: 2vh 0;
+  z-index: 1;
 }
 
 .nav-list {
@@ -26,12 +27,24 @@ nav {
   color: black;
 }
 
+.ham {
+  display: none;
+  position: fixed;
+  top: 5px;
+  right: 5px;
+  padding: 0 5px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  z-index: 1;
+}
+
 @media only screen and (max-width: 768px) {
   nav {
     position: fixed;
     right: 0;
     height: 100%;
-    width: 15%;
+    width: 30%;
     transform: translateX(100%);
     transition: 1s ease-out;
   }
@@ -42,5 +55,8 @@ nav {
   }
   .active {
     transform: translateX(0);
+  }
+  .ham {
+    display: block;
   }
 }
